Fixed some layout issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,14 +5,19 @@
     box-sizing: border-box;
 }
 
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
 html {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   background-color: #f0f0f0;
   color: #333;
   -webkit-font-smoothing: antialiased;
